--- a/requirements-pypy.txt
+++ b/requirements-pypy.txt
@@ -1,15 +1,18 @@
-numpy
+ac-library-python==0.1.0
+bitarray==3.2.0
+cffi==1.18.0.dev0
+greenlet==0.4.13
+hpy==0.9.1.dev61+g79fb330d
+more-itertools==10.6.0
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.2.4
+PuLP==3.0.2
+sortedcontainers==2.4.0
+sympy==1.13.3
 # scipy
-networkx
-sympy
-sortedcontainers 
-more-itertools
 # shapely
-bitarray
-PuLP
-mpmath
 # pandas
 # z3-solver
 # scikit-learn
-ac-library-python
 # cppyy==2.4.1
