--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: username lowercase
-        run: echo "IMAGE_NAME=${github.repository,,}" >> ${GITHUB_ENV}
+        run: REPO=${{ github.repository }} && echo "IMAGE_NAME=${REPO,,}" >> ${GITHUB_ENV}
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
